# qwen-seek-chat

./: AGENTS.md  docker-compose.yaml  opencode.json
fastapi/: .coveragerc  .flake8  Dockerfile  celeryconfig.py  check_test_coverage.sh  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt  sonar-project.properties
fastapi/app/: __init__.py  asgi.py  consumer.py  producer.py
fastapi/app/api/api_v1/endpoints/: __init__.py  model_view.py  websocket_chat.py
fastapi/app/controllers/: __init__.py
fastapi/app/controllers/v1/: message_controller.py  model_controller.py  sync_resource_controller.py
fastapi/app/core/: log.py
fastapi/app/core/exceptions/: app_exceptions.py
fastapi/app/core/repository/base/: sql_base_repository.py
fastapi/app/models/: __init__.py
fastapi/app/providers/: redis_provider.py
fastapi/app/schema/v1/: chat_schema.py
fastapi/app/services/: chat_service.py  ollama_service.py  redis_service.py
fastapi/app/utils/: __init__.py  auth.py  openapi_responses.py  utils.py
fastapi/data/: qwen_chat.db
fastapi/migrations/: env.py
fastapi/migrations/versions/: 52ceabffe697_initial_migration.py  76c39652c002_add_nullable_constraints.py  fdad899503ab_add_chat_models.py
fastapi/tests/: async_base_test_case.py  base_test_case.py  conftest.py  test_migration_scripts.py
fastapi/tests/controllers/: test_sync_resource_controller.py
fastapi/tests/utils/: __init__.py  mock_response.py
fastapi/tests/views/: test_sync_resource_view.py
scripts/: init_models.sh
vue/: .env  .env.production  Dockerfile  index.html  nginx.conf  (+4 more)
(+111 files in other folders)
