[project]
name = "fastapitemplate"
version = "0.1.0"
description = ""
authors = [
    {name = "masumadu",email = "masumadu@archsolutions.online"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.119.0,<0.120.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.17.0,<2.0.0)",
    "kafka-python (>=2.2.15,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "fastapi-pagination (==0.14.2)",
    "pinject (>=0.14.1,<0.15.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "redis (>=6.4.0,<7.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "greenlet (>=3.0.0,<4.0.0)",
    "ollama (>=0.4.0,<1.0.0)",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
pytest-mock = "^3.15.1"
fakeredis = "^2.32.0"
pytest = "^8.4.2"
flake8 = "^7.1.0"